# nxc-Exa-AtoW

./: .gitignore  .gitlab-ci.yml  .mdbookignore  README.md  book.toml  composition.nix  compositions.nix  flake.nix  justfile  nxc.json
.github/workflows/: mdbook.yml
config/ebservice/: ebservice.ini  log_conf.yaml  requirements-server.txt
config/ebuffer/: eb.ini  log_conf.yaml
docs/: .mdbookignore  DevNotes.md  README.md  SUMMARY.md  Usage.md
docs/concepts/: ebuffer.md  exa-atow.md  hpc-as-a-service.md  monorepo.md  nxc.md  technology-stack.md
docs/concepts/stack/: ebuffer.md
docs/reference/: commands.md
docs/stack/: ebuffer.md  technology-stack.md
docs/theme/: custom.css
docs/tutorial/: quickstart.md  where-to-work.md
docs/tutorial/add-mpi-workload/: README.md  host-e2e.md  program-and-package.md  run-and-debug.md  slurm-and-nxc.md
e2e/: common.py  minimal-e2e.py  minimal-hpc.ini  minimal-job.ini  mpi-hello-job.ini  mpi_hello_e2e.py  openqcd-job.ini  openqcd-ym1.in  openqcd_e2e.py  pyproject.toml
e2e/nxc/: common.nix  default.nix  mpi-hello.nix  multi-software-composition.nix  openqcd.nix
examples/: minimal-e2e.py  mpi-hello.sbatch  openqcd-ym1.sbatch  pyproject.toml
scripts/: run-e2e.sh  tunnel.sh
software/: default.nix  mpi-hello.c  mpi-hello.nix  openmpi.nix  openqcd.nix
